k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: namistore-backend
  namespace: namistore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: namistore-backend
  template:
    metadata:
      labels:
        app: namistore-backend
    spec:
      containers:
        - name: namistore-backend
          image: 274703560582.dkr.ecr.ap-south-1.amazonaws.com/namistore-backend:17
          ports:
            - containerPort: 5000

	  resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
