k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: namistore-frontend
  namespace: namistore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: namistore-frontend
  template:
    metadata:
      labels:
        app: namistore-frontend
    spec:
      containers:
        - name: namistore-frontend
          image: 274703560582.dkr.ecr.ap-south-1.amazonaws.com/namistore-frontend:17
          ports:
            - containerPort: 3000
	  resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
