k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: namistore-backend-service
  namespace: namistore
spec:
  selector:
    app: namistore-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
