k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: namistore-frontend-service
  namespace: namistore
spec:
  selector:
    app: namistore-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
